--- a/Publishing/resources/css/style.css
+++ b/Publishing/resources/css/style.css
@@ -1,12 +1,148 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 header {
-    background-color: rgba(0, 0, 5, 0.382);
-    width: 100%;
-    height: 200px;
+    background-color: rgba(255, 196, 35, 0.382);
+    width: 1700px;
+    height: 160px;
+    position:absolute;
+    align-items: center;
 }
 
 #header-sign-in a {
     text-decoration: none;
     color: white;
     float: right;
+    margin-right: 100px;
+    margin-top: 10px;
 }
+
+#logo-and-nav {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.logo {
+    margin-left: 20px;
+}
+
+#logo-and-nav nav {
+    display: grid;
+    width: 600px;
+    height: 100%;
+    margin-right: 40px;
+}
+
+#logo-and-nav ul {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+}
+
+#logo-and-nav li {
+    height: 100%;
+    display: flex;
+    text-align: center;
+    font-size: 18px;
+}
+
+#logo-and-nav a{
+    text-decoration: none;
+    color: black;
+    margin-right: 30px;
+}
+
+main{
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+#banner{
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider {
+    padding: 0;
+    margin: 0;
+    width: 1700px;
+    height: 700px;
+    overflow: hidden;
+}
+
+.slide{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 700px;
+    display: flex;
+}
+
+.slide input {
+    padding: 0;
+    margin: 0;
+    display: none;
+}
+
+.banner-itme {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    transition: 2s; 
+}
+
+.banner-itme img {
+    padding: 0;
+    margin: 0;
+    width: 1700px;
+    height: 700px;  
+}
+
+.nav-m{
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    width: 1700px;
+    margin-top: -40px;
+    justify-content: center;
+    display: flex;
+}
+.m-btn{
+    border: 2px solid rgb(255, 196, 35);
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.m-btn:not(:last-child){
+    margin-right: 15px;
+}
+
+.m-btn:hover{
+    background-color: rgb(180, 132, 0);
+}
+
+#radio1:checked ~.first{
+    margin-left: 0;
+}
+
+#radio2:checked ~.first{
+    margin-left: -100%;
+}
+
+#radio3:checked ~.first{
+    margin-left: -200%;
+}
+
 
