--- a/Publishing/resources/css/style.css
+++ b/Publishing/resources/css/style.css
@@ -1,8 +1,4 @@
 
-html {
-    position: relative;
-}
-
 * {
     padding: 0;
     margin: 0;
@@ -211,7 +207,7 @@ label.right {
 }
 
 @keyframes slide4 {
-    0%    {left: 0%;}
+    0%    {left: 0%;}   
     10% {left: 0%;}
     16.6%  {left: 100%;}
     26.7% {left: 100%;}
@@ -322,7 +318,9 @@ label.right {
     box-shadow:  0 0 10px 0 rgba(0, 0, 0, 1);
 }
 
-.house-cards a {
+
+
+.btn-house a {
     margin-top: 40px;
     color: black;
     background-color: #cac6ff;
@@ -330,6 +328,11 @@ label.right {
     text-decoration: none;
     float: right;
     border-radius: 10px;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -347,4 +350,93 @@ label.right {
 
 .thebogi {
     margin: 5px;
+}
+
+#pro {
+    display: flex;
+    background-color: #ddd9ffa1 ;
+    margin-top: 200px;
+    justify-content: center;
+    align-items: center;
+    box-shadow:  0 0 10px 0 rgba(0, 0, 0, 1);
+}
+
+.pro-h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    margin-right: auto;
+    margin-left: auto;
+    flex-direction: column;
+}
+
+.pro-h2 a {
+    width: 90px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    color: black;
+    background-color: #cac6ff;
+    font-size: 25px;
+    text-decoration: none;
+    float: right;
+    border-radius: 10px;
+}
+
+.pro-cards {
+    padding: 0;
+    width: 1400px;
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+    grid-auto-rows: minmax(350px, auto);
+    justify-content: center;
+    align-items: center;
+    grid-template-rows: 450px;
+
+}
+
+.pro-cards > .pro-card {
+    position: relative;
+    width: 600px;
+    height: 400px;
+}
+
+.pro-item {
+    position: absolute;
+    width: 600px;
+    height: 400px;
+    transform-style: preserve-3d;
+    transition: all 1s ease;
+}
+
+.pro-front img {
+    width: 100%;
+    height: 100%;
+}
+
+.pro-front {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.pro-back {
+    background-color: #cac6ff;
+    position: absolute;
+    width: 600px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+}
+
+.pro-item:hover {
+    transform: rotateY(180deg);
 }
