--- a/Publishing/resources/css/style.css
+++ b/Publishing/resources/css/style.css
@@ -153,6 +153,14 @@ label.right {
     background-repeat: no-repeat;
 }
 
+label.left:hover {
+    background-color: #a19fe76c;
+}
+
+label.right:hover {
+    background-color: #a19fe76c;
+}
+
 [id="slide1"]:checked ~ .slidelist .slideitem {transform: translateX(0); animation: slide1 20s infinite;}
 [id="slide2"]:checked ~ .slidelist .slideitem {transform: translateX(-100%); animation: slide2 20s infinite;}
 [id="slide3"]:checked ~ .slidelist .slideitem {transform: translateX(-200%); animation: slide3 20s infinite;}
@@ -400,13 +408,13 @@ label.right {
 
 .pro-cards > .pro-card {
     position: relative;
-    width: 600px;
+    width: 500px;
     height: 400px;
 }
 
 .pro-item {
     position: absolute;
-    width: 600px;
+    width: 500px;
     height: 400px;
     transform-style: preserve-3d;
     transition: all 1s ease;
@@ -427,7 +435,7 @@ label.right {
 .pro-back {
     background-color: #cac6ff;
     position: absolute;
-    width: 600px;
+    width: 500px;
     height: 400px;
     display: flex;
     justify-content: center;
@@ -439,4 +447,66 @@ label.right {
 
 .pro-item:hover {
     transform: rotateY(180deg);
+}
+
+#review {
+    width: 100%;
+    height: 500px;
+}
+
+.review-back {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.btn-house a:hover {
+    background-color:#a19fe7 ;
+}
+
+.review-info {
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    justify-content: left;
+    align-items: center;
+    font-size: 20px;
+    grid-gap: 40px;
+
+
+}
+
+.review1 {
+    width: 500px;
+    height: 400px;
+    border-radius: 10px;
+    background-color: #ddd9ff; 
+}
+
+
+.review2 {
+    width: 500px;
+    height: 400px;
+    border-radius: 10px;
+    background-color: #ddd9ff;
+}
+
+.review-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.review-btn h5 {
+    font-size: 30px;
+}
+
+footer {
+    background-color: #a19fe7;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
